Moved pool value from template to main build definition file

--- a/src/admin/azure-pipelines.yml
+++ b/src/admin/azure-pipelines.yml
@@ -6,6 +6,9 @@
 trigger:
 - master
 
+pool:
+  vmImage: 'ubuntu-latest'
+
 extends:
   template: /devops/azure-devops/templates/build-dotnet-core.yaml
   parameters:
