Added build pipeline definition for API

--- a/src/Api/azure-pipelines.yml
+++ b/src/Api/azure-pipelines.yml
@@ -4,7 +4,7 @@ trigger:
     - master
   paths:
     include:
-    - 'src/Admin/*'
+    - 'src/Api/*'
 
 pool:
   vmImage: 'ubuntu-latest'
@@ -13,4 +13,4 @@ extends:
   template: /devops/azure-devops/templates/build-dotnet-core.yaml
   parameters:
     buildConfiguration: 'Release'
-    projectName: 'Admin'
+    projectName: 'Api'
