Added pipeline for Billing

--- a/src/Billing/azure-pipelines.yml
+++ b/src/Billing/azure-pipelines.yml
@@ -14,4 +14,4 @@ extends:
   template: /devops/azure-devops/templates/build-dotnet-core.yaml
   parameters:
     buildConfiguration: 'Release'
-    projectName: 'Admin'
+    projectName: 'Billing'
